# crypto_pipeline_aws_automated

./: .env.example  .gitignore  Project.txt  README  pyproject.toml  requirements-dev.txt  requirements.txt
airflow/dags/: crypto_pipeline_dag.py
docker/lambda/: Dockerfile
docker/spark/: Dockerfile
scripts/: bootstrap_emr.sh
src/analytics/: athena_queries.sql  glue_catalog_job.py
src/ingestion/: __init__.py  crypto_apis.py  lambda_function.py
src/monitoring/: custom_metrics.py  grafana_setup.py
src/processing/: crypto_stream_processor.py  technical_indicators.py
terraform/: main.tf
